# 1d_toy_model

./: .gitignore  ITV_engine.py  PTV_engine.py  basic_test_2d.py  basic_tests.py  fractionation_comparisons.py  hybrid_raster_compare.py  main.py  optimiser.py  optimiser_comparisons.py  pyproject.toml  repainting_comparisons.py
final_plots/: optimizer_performance_summary.csv  summary_hyperfractionation.csv  summary_hypofractionation.csv
