[project]
name = "1d-toy-model"
version = "0.2.1"
description = "A simulation of 1-D proton beam scanning sequences on targets subject to breathing motion. This specifically calculates the dose distribution over the GTV and the mean squared error from the intended dose distribution."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
]
